--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ SQLAlchemy==2.0.41
 typing_extensions==4.14.0
 Werkzeug==3.1.3
 psycopg2-binary
+PyMySQL==1.1.0
+cryptography==41.0.7
 requests==2.31.0
 python-dotenv==1.0.0
 email-validator==2.1.0
