🔐 FEAT: Ajout fonctionnalité complète de récupération de mot de passe
- Nouveau modèle PasswordResetToken avec expiration
- Service d'envoi d'emails avec Flask-Mail
- 3 nouveaux endpoints API: forgot-password, reset-password, verify-reset-token
- Templates d'emails HTML professionnels
- Script de test et documentation complète
- Configuration sécurisée avec tokens uniques et expiration

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,19 @@ STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
 # URLs de production (à adapter)
 # CORS_ORIGINS=https://your-domain.com
 # FRONTEND_URL=https://your-domain.com
+
+
+# Configuration Email (OBLIGATOIRE pour la récupération de mot de passe)
+MAIL_SERVER=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USE_TLS=True
+MAIL_USE_SSL=False
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
+MAIL_DEFAULT_SENDER=your-email@gmail.com
+
+# Note: Pour Gmail, utilisez un "App Password" au lieu de votre mot de passe normal
+# https://support.google.com/accounts/answer/185833?hl=fr
+
+# URLs de production pour les emails
+# FRONTEND_URL=https://smartlinks.mdmcmusicads.com
